--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,34 @@
 body{
 font-family: 'Roboto', sans-serif;
 }
+
+/* header section */
+header nav{
+    background-color: #fff;
+    box-shadow: 0px 0px 5px #444;
+}
+.navbar-brand img{
+    height: 40px;
+}
+form.search-form {
+    width: 300px;
+    margin-right: 60px;
+    position: relative;
+}
+.search-form input{
+    border-radius: 50px;
+}
+button.search-btn {
+    padding: 6px 30px;
+    border-radius: 50px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: tomato;
+    border: 0;
+    color: white;
+}
+.action-menu .nav-item .nav-link{
+    margin: 0 25px;
+    font-size: 20px;
+}
